// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label
    for="id-1-1"
  >
    My Label
  </label>
  <input
    id="id-1-1"
    type="text"
    value=""
  />
</div>
`;

exports[`TextBox component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label
    for="id-2-1"
  >
    My Label
  </label>
  <input
    id="id-2-1"
    type="text"
    value="My Input Value"
  />
</div>
`;

exports[`TextBox component handling input should update a value when changed 1`] = `
<div
  class="form-row_container"
>
  <label
    for="id-3-1"
  >
    My Label
  </label>
  <input
    id="id-3-1"
    type="text"
    value="Updated Value"
  />
</div>
`;
